--- a/blog-tutorial/src/pages/index.astro
+++ b/blog-tutorial/src/pages/index.astro
@@ -4,8 +4,12 @@ import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+
+const pageTitle = "Welcome";
+
 ---
 
 <Layout>
 	<Welcome />
+	<h1>{pageTitle}</h1>
 </Layout>
