--- a/blog-tutorial/src/pages/about.astro
+++ b/blog-tutorial/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import '../styles/global.css';
+
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -13,6 +16,9 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "crimson";
+
 ---
 
 <html lang="en">
@@ -22,13 +28,13 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
     <title>{pageTitle}</title>
-    <style>
+    <style define:vars={{skillColor}}>
     h1{
-        colour: purple;
+        color: purple;
         font-size: 4rem;
     }
     .skill{
-        colour: green;
+        color: var(--skillColor);
         font-weight: bold;
     }
     </style>
@@ -56,9 +62,8 @@ const goal = 3;
 
 <p>My skills are:</p>
 <ul>
-  {skills.map((skill) => <li class= "skill">{skill}</li>)}
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
 </ul>
-
 
 {happy && <p>I am happy to be learning Astro!</p>}
 
