--- a/blog-tutorial/src/pages/about.astro
+++ b/blog-tutorial/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
+import Header from "../components/Header.astro";  
 import '../styles/global.css';
+import Footer from "../components/Footer.astro";
 
 
 const pageTitle = "About Me";
@@ -40,9 +42,7 @@ const skillColor = "crimson";
     </style>
   </head>
   <body>
-    <a href = "/"> Home </a>
-    <a href = "/about"> About </a>
-    <a href = "/blog"> Blog </a>
+    <Header />
 
 
     <h1>{pageTitle}</h1>
@@ -70,6 +70,10 @@ const skillColor = "crimson";
 {finished && <p>I finished this tutorial!</p>}
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-
+  <Footer />
+  <script>
+		import '../scripts/menu.js';
+	</script>
   </body>
 </html>
+
