--- a/blog-tutorial/src/pages/about.astro
+++ b/blog-tutorial/src/pages/about.astro
@@ -1,10 +1,8 @@
 ---
-import Header from "../components/Header.astro";  
-import '../styles/global.css';
-import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 
-const pageTitle = "About Me";
+const {pageTitle} = Astro.props;
 
 const identity = {
     firstName: "Sarah",
@@ -23,13 +21,7 @@ const skillColor = "crimson";
 
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
     <style define:vars={{skillColor}}>
     h1{
         color: purple;
@@ -40,12 +32,6 @@ const skillColor = "crimson";
         font-weight: bold;
     }
     </style>
-  </head>
-  <body>
-    <Header />
-
-
-    <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
     <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
     <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
@@ -70,10 +56,5 @@ const skillColor = "crimson";
 {finished && <p>I finished this tutorial!</p>}
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-  <Footer />
-  <script>
-		import '../scripts/menu.js';
-	</script>
-  </body>
-</html>
+</BaseLayout>
 
